--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "clean": "rm -rf public",
     "deploy": "cp -a client/build/. public/",
     "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
+  },
+  "dependencies": {
+    "navigate": "^0.3.6",
+    "routes": "^2.1.0"
   }
 }
