--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,19 @@
     "node": "16.x"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "browser-router": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "4.0.3",
     "useref": "^1.4.4",
